--- a/Index.html
+++ b/Index.html
@@ -21,8 +21,8 @@
                 <a><input type="text" placeholder="Search..." name="q" id="search" required>
                     <input type="submit" value="Search" onclick="showSearchPrompt()" style="background-color: black; color: aliceblue;"></a>
                 <k>
-                    <a href="login.html"  target="_blank">login</a>
-                    <a href="sign.html"  target="_blank">register &#174</a>
+                    <a href="login.html"  target="_blank">Login</a>
+                    <a href="sign.html"  target="_blank">Register</a>
                 </k>
             </div>
             <hr style="color:rgb(210, 210, 230)">
@@ -44,8 +44,8 @@
         </div>
         <div id="button">
             <m>
-                <a href="login.html" target="_blank" class="urivl" onclick="showPopup('You are ready for login')"><button>login</button></a>
-                <a href="sign.html"  target="_blank" class="urivs" onclick="showPopup(' sign up now')"><button>sign up</button></a>
+                <a href="login.html" target="_blank" class="urivl" onclick="showPopup('You are ready for Login')"><button>Login</button></a>
+                <a href="sign.html"  target="_blank" class="urivs" onclick="showPopup('Sign up now')"><button>Sign Up</button></a>
             </m>
         </div>
     </nav>
@@ -53,7 +53,7 @@
     <br><br><br><br><br>
     <div class="hero-section">
         <div class="hero-msg">
-            <p>We Want You. Apply And Work With Us. <a href="login.html">Click here to go to login</a></p>
+            <p>We Want You. Apply And Work With Us. <a href="login.html">Click here to go to Login</a></p>
         </div>
     
             </div>
